ensure roll tooltips are visible

--- a/FVTT-module/beyond20/beyond20.css
+++ b/FVTT-module/beyond20/beyond20.css
@@ -4,6 +4,7 @@
 .beyond20-roll-result,
 .beyond20-roller-error {
     position: relative;
+    overflow: visible;
     padding: 0px 5px;
 }
 
